--- a/src/css/site.css
+++ b/src/css/site.css
@@ -9,8 +9,8 @@
 }
 
 .entity {
+  position: relative;
   display: inline-block;
-  /* width: 100px; */
   border: 1px solid #ccc;
   margin: 5px;
 }
