--- a/src/css/site.css
+++ b/src/css/site.css
@@ -1,3 +1,7 @@
+body {
+  font-family: sans-serif;
+}
+
 .cover {
   position: absolute;
   top: 0;
@@ -11,7 +15,6 @@
 .entity {
   position: relative;
   display: inline-block;
-  border: 1px solid #ccc;
   margin: 5px;
 }
 
@@ -31,4 +34,14 @@
   text-align: center;
   border: 2px solid #fff;
   border-radius: 50%;
+}
+
+/* Comments */
+.commentsSection {
+  margin-right: 10px;
+}
+.commentsSection textarea.comments {
+  resize: none;
+  width: 100%;
+  border: #333 solid 1px;
 }
