Add copyright disclaimer at bottom of page template and remove usage of state hook to get entities

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -10,5 +10,9 @@
     </head>
     <body>
         <div id="app-container"></div>
+        <hr />
+        <small>
+            All images are copyright of Hasbro Games, I have scanned them in for the benefit of this page. Code and logic belongs to me, and will be publicly available on github soon.
+        </small>
     </body>
 </html>
