Update disclaimer at bottom of page to include link to repo

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <meta type="title" content="Cluedo Game Card | jonifen.co.uk">
-        <meta type="descripton" content="An online game card to replace the Cluedo paper card.">
-        <title>Cluedo Notes Card</title>
-        <link rel="stylesheet" type="text/css" href="./css/site.css" />
-    </head>
-    <body>
-        <div id="app-container"></div>
-        <hr />
-        <small>
-            All images are copyright of Hasbro Games, I have scanned them in for the benefit of this page. Code and logic belongs to me, and will be publicly available on github soon.
-        </small>
-    </body>
+
+<head>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta type="title" content="Cluedo Game Card | jonifen.co.uk">
+  <meta type="descripton" content="An online game card to replace the Cluedo paper card.">
+  <title>Cluedo Notes Card</title>
+  <link rel="stylesheet" type="text/css" href="./css/site.css" />
+</head>
+
+<body>
+  <div id="app-container"></div>
+  <hr />
+  <small>
+    All images are copyright of Hasbro Games, I have scanned them in for the benefit of this page. Code and logic
+    belongs to me, and is available on my <a href="https://github.com/jonifen/cluedo-assistant/">Github</a> profile.
+  </small>
+</body>
+
 </html>
